--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -10,7 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap eCommerce Page Template</title>
-  <!-- Bootstrap -->
+  <!-- Bootstrap -->sss
 </head>
 <body class="bg-dark">
 <nav  class="navbar navbar-expand-lg navbar-dark bg-dark" >
