--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <nav  class="navbar navbar-expand-lg navbar-dark bg-dark" >
   <div class="container">
-    <a class="navbar-brand" href="#">Moja kuhinja;</a>
+    <a class="navbar-brand" href="#">Moja kuhinja</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Rezervacija</a>
+          <a class="nav-link" href="#" [routerLink]="['reservation']">Rezervacija</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Kontaktirajte nas</a>
+          <a class="nav-link" href="#" [routerLink]="['adminLogin']">Log in</a>
         </li>
 
       </ul>
