--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -8,15 +8,15 @@
     <div class="col-md-12 login-form-1">
 
       <h3>Samo za Admina</h3>
-      <form>
+      <form [formGroup] ="unos_admin">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Your Email *" value="" />
+          <input type="text" class="form-control" placeholder="Username *" value="" formControlName ="username">
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" placeholder="Your Password *" value="" />
+          <input type="password" class="form-control" placeholder="Your Password *" value="" formControlName="password">
         </div>
         <div class="form-group">
-          <input type="submit" class="btnSubmit" value="Login" />
+          <input type="submit" class="btnSubmit" value="Login" (click) = "submit()">
         </div>
         <div class="form-group">
 
