--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,25 @@
-<nav  class="navbar navbar-expand-lg navbar-dark bg-dark" >
-  <div class="container">
-    <a class="navbar-brand" href="#">Moja kuhinja</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="['reservation']">Rezervacija</a>
+          <a class="nav-link active" aria-current="page" href="#">Pocetna</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="['adminLogin']">Log in</a>
+          <a class="nav-link" [routerLink]="['reservation']" href="#">Rezervisi mjesto </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['adminLogin']" href="#">Log in</a>
+        </li>
+        <li class="nav-item dropdown">
 
+
+        </li>
       </ul>
-
     </div>
   </div>
 </nav>
