--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,17 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Pocetna</a>
+          <a class="nav-link active" aria-current="page">Pocetna</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['reservation']" href="#">Rezervisi mjesto </a>
+          <a class="nav-link" [routerLink]="['reservation']">Rezervisi mjesto </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['adminLogin']" href="#">Log in</a>
+        <li class="nav-item" *ngIf = "servis.logovan == false">
+          <a class="nav-link" [routerLink]="['adminLogin']" >Log in</a>
         </li>
-        <li class="nav-item dropdown">
-
-
+        <li class="nav-item" *ngIf = "servis.logovan == true">
+          <a class="nav-link" (click) ="odjavi()" >Odjavi se</a>
         </li>
       </ul>
     </div>
