--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -76,62 +76,15 @@
   </div>
 
 <hr>
-<div class="container text-white bg-dark p-4">
-  <div class="row">
-    <div class="col-6 col-md-8 col-lg-7">
-      <div class="row text-center">
-        <div class="col-sm-6 col-md-4 col-lg-4 col-12">
-          <ul class="list-unstyled">
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-          </ul>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 col-12">
-          <ul class="list-unstyled">
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-          </ul>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4 col-12">
-          <ul class="list-unstyled">
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-            <li class="btn-link"> <a>Link anchor</a> </li>
-          </ul>
-        </div>
-      </div>
+
+  <footer class="bg-dark text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: whitesmoke">
+      © 2021 Copyright:
+      <a class="text-light" >Drazen Jeknic</a>
     </div>
-    <div class="col-md-4 col-lg-5 col-6">
-      <address>
-        <strong>MyStoreFront, Inc.</strong><br>
-        Indian Treasure Link<br>
-        Quitman, WA, 99110-0219<br>
-        <abbr title="Phone">P:</abbr> (123) 456-7890
-      </address>
-      <address>
-        <strong>Full Name</strong><br>
-        <a href="mailto:#">first.last@example.com</a>
-      </address>
-    </div>
-  </div>
-</div>
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <p>Copyright © MyWebsite. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
+    <!-- Copyright -->
+  </footer>
 
 
 
