--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <img class="navbar-brand" [routerLink]="['homepage']" src="https://png.pngtree.com/templates/20180809/restaurant-logos-png-png_25706.jpg"style="border-radius: 50%;height: 100px;width: 100px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page">Pocetna</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['reservation']">Rezervisi mjesto </a>
