--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 </style>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap eCommerce Page Template</title>
-  <!-- Bootstrap -->
-</head>
+
+<div class="container-fluid " style="background-color: black">
 <body class="bg-dark">
 
 <div class="container mt-3" >
@@ -92,4 +86,5 @@
 
 </div>
 </body>
-</html>
+
+</div>
