--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -8,9 +8,9 @@
 <div class="container-fluid " style="background-color: black">
 <body class="bg-dark">
 
-<div class="container mt-3" >
+<div class="container pb-5" >
 
-<div class="container mt-3">
+<div class="container pb-5">
 <div id="a" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#a" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
