--- a/src/app/admin-board/admin-board.component.html
+++ b/src/app/admin-board/admin-board.component.html
@@ -286,7 +286,7 @@
         <td>{{a.broj_gostiju}}</td>
         <td>{{a.pocetak_rezervacije}}</td>
 <td><button class="btn btn-primary">Posalji potvrdu.</button></td>
-        <button class="btn btn-danger" (click)="reserveTableAdmin(a.id,false)">Otkazi</button>
+    <td>   <button class="btn btn-danger" (click)="reserveTableAdmin(a.id,false)">Otkazi</button></td>
       </tr>
 
       </tbody>
