--- a/src/app/admin-board/admin-board.component.html
+++ b/src/app/admin-board/admin-board.component.html
@@ -23,9 +23,9 @@
   <link rel="shortcut icon" href="/assets/images/favicon.png" />
 </head>
 
-<div class="container-scroller col-md-12">
+<div class=" col-md-12">
   <!-- partial:partials/_sidebar.html -->
-  <nav class="sidebar sidebar-fixed col-md-4" id="sidebar">
+  <nav class="sidebar  col-md-4" id="sidebar">
     <ul class="nav">
       <li class="nav-item nav-profile border-bottom">
         <a href="#" class="nav-link flex-column">
@@ -183,7 +183,7 @@
 
 
     </div>
-
+<div class="table-responsive">
     <table class="table " *ngIf="Admintabs===4">
       <thead>
       <tr >
@@ -206,7 +206,7 @@
 
       </tbody>
     </table>
-
+  </div>
     <div class="form-control" *ngIf="Admintabs==5">
       <h3> Dodajte stol </h3>
       <div class="row" >
