--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
           <a class="nav-link" [routerLink]="['adminLogin']" >Log in</a>
         </li>
         <li class="nav-item" *ngIf = "servis.logovan == true">
+          <a class="nav-link" [routerLink]="['adminPanel']"  >Admin</a>
+        </li>
+        <li class="nav-item" *ngIf = "servis.logovan == true">
           <a class="nav-link" (click) ="odjavi()" >Odjavi se</a>
         </li>
       </ul>
