--- a/src/app/admin-board/admin-board.component.html
+++ b/src/app/admin-board/admin-board.component.html
@@ -23,7 +23,8 @@
   <link rel="shortcut icon" href="/assets/images/favicon.png" />
 </head>
 
-<div class=" col-md-12">
+<div class="col-md-12">
+  <div class="row">
   <!-- partial:partials/_sidebar.html -->
   <nav class="sidebar  col-md-4" id="sidebar">
     <ul class="nav">
@@ -291,10 +292,10 @@
 
       </tbody>
     </table>
+
+
   </div>
-
-
-
+  </div>
 </div>
 <!-- container-scroller -->
 <!-- plugins:js -->
