--- a/src/app/reservation-page/reservation-page.component.html
+++ b/src/app/reservation-page/reservation-page.component.html
@@ -45,7 +45,7 @@
                         <div class="form-group"> <input class="form-control" type="text" placeholder="Ime i prezime" [(ngModel)]="reservation.ime_gosta"> <span class="form-label">Ime i prezime</span> </div>
                         <div class="row">
                             <div class="col-md-5">
-                                <div class="form-group"> <input class="form-control" type="datetime-local" required [(ngModel)]="reservation.pocetak_rezervacije"> <span class="form-label">Datum rezervacije</span> </div>
+                                <div class="form-group"> <input class="form-control" type="datetime-local" required [(ngModel)]="reservation.datum"> <span class="form-label">Datum rezervacije</span> </div>
                             </div>
 
                         </div>
